# skc_library

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Makefile.am  README  README.md  build.sh  build_skc_key-protection.sh  configure.ac  glib-tap.mk  install_config  kw.config  kw_scan_remote  set_proxy.sh  tap-driver.sh  tap-test
api-module/pkcs11/: configure.ac
api-module/pkcs11/aes-test/: aes_encrypt_decrypt.cpp  build.sh  cleanup.sh  config  doit.sh
api-module/pkcs11/rsa-test/: config  pkcs11-apimodule.ini.in  query.sh  rsa-sign.sh  rsa-verify.sh  testdata
api-module/pkcs11/src/: Makefile.am  apimodule-sgx.cpp  apimodule-sw.cpp  internal.h  pkcs11-apimodule.cpp  pkcs11-apimodule.ini  utils.c
api-module/pkcs11/test/: README  cleanup.sh  config  query.sh  rsa-sign.sh
api-module/pkcs11/tests/: Makefile.am  cleanup.sh  config.in  engines.cnf.in  pkcs11-apimodule.ini.in  query.sh
api-module/pkcs11/tests/aes-test/: Makefile.am  aes_encrypt_decrypt.cpp  doit.sh
api-module/pkcs11/tests/rsa-test/: nginx_rsa_test.sh  rsa-decrypt.sh  rsa-encrypt.sh  rsa-sign.sh  rsa-verify.sh
config-file/: CMakeLists.txt  Makefile.am  configure.ac  glib-tap.mk  key_configfile.h
config-file/src/: CMakeLists.txt  Makefile.am  key_configfile.c
config-file/tests/: .gitignore  Makefile.am  configtest.c  configtest1.c  test1.ini
configs/: credential_agent.ini  key-agent.ini  kms_npm.ini  reference_npm.ini  sgx_stm.ini  sw_stm.ini  testserver.ini
container/: Dockerfile  README  configure_skc.sh  deployment.yaml  entrypoint.sh  skc_library_create_roles.sh  skc_roles.conf
container/resources/: create_roles.conf  e030eaab-1207-44e4-b7a5-a7a3707f98b5.crt  hosts  keys.txt  kms_npm.ini  nginx.conf  openssl.cnf  pkcs11-apimodule.ini  sgx_default_qcnl.conf  sgx_stm.ini  skc_library.conf  skc_library_create_roles.sh
credential-agent/: Makefile.am  credential_agent.h
credential-agent/commandline_tool/: Makefile.am  README.txt  common_utils  cred_agent.sh  cred_init.sh  credential_agent.ini  credential_agent_init  credential_agent_tool
credential-agent/commandline_tool/conf/: cred_agent.sh  cred_init.sh  main.conf
credential-agent/reference/src/: Makefile.am  init.c
credential-agent/src/: Makefile.am  init.c
credential-agent/tests/: Makefile.am  configtest.c  test_agent.sh  test_cred_agent.sh  test_errors.c
include/: k_debug.h  k_errors.h  k_types.h
key-agent/: CMakeLists.txt  Makefile.am  configure.ac  key_agent.h  types.h
key-agent/cli/: CMakeLists.txt  Makefile.am  main.c
key-agent/npm/: npm.h  npm_init.cpp
key-agent/src/: CMakeLists.txt  Makefile.am  cache-common.cpp  cache-init.cpp  cache-key.cpp  cache-session.cpp  cert.cpp  curl.cpp  init.c  internal.h  intf.cpp  key.cpp  key_init.c  key_init.cpp  request.cpp  session.cpp  utils.cpp
key-agent/stm/: stm.h  stm_init.cpp
key-agent/tests/: .gitignore  Makefile.am  configtest.c  initflows.c  key-agent.ini  kms_npm.ini  sw_stm.ini  test_errors.c
key-agent/tests/test_app/: Makefile.am  test_app.c
m4/: acx_libcurl.m4  dhsm.m4  glibtests.m4  sgx.m4
npm/: CMakeLists.txt  Makefile.am  npm.h
npm/kmip/src/: Makefile.am  init.c
npm/kms/: Makefile.am  configure.ac  kms.h
npm/kms/src/: Makefile.am  cms.cpp  init.c  internal.h  intf.cpp
npm/kms/tests/: Makefile.am  kms_npm.ini  test_npm_kms.c
npm/reference/: configure.ac
npm/reference/src/: CMakeLists.txt  Makefile.am  cms.cpp  intf.cpp
npm/tests/test_app/: Makefile.am  configure.ac  test_app.c
scripts/: QuoteGeneration.patch  QuoteVerification.patch  build.sh  build_libcurl.sh  build_sgx.sh  build_sgx_artifacts.sh  common_utils.sh  config.ini  config_rhel.ini  config_ubuntu.ini  create-feature-branch.sh  create-feature-review.sh  deploy_sgx_artifacts.sh  generate_bin.sh  generate_external_deps_bin.sh  pre-req.sh  sgx_measurement.diff  uninstall.sh  workload
stm/: CMakeLists.txt  Makefile.am  stm.h
stm/kpt/: Makefile.am
stm/kpt/src/: Makefile.am  init.c
stm/sgx/: Makefile.am  configure.ac
stm/sgx/src/: Makefile.am  application_intf.cpp  init.cpp  internal.h  server_intf.cpp  sgx_ecdsa_quote_verify.cpp  sgx_ecdsa_quote_verify.h  sgx_epid_quote_verify.cpp  sgx_epid_quote_verify.h
stm/sgx/tests/: Makefile.am  sgx_epid_quote_verify_test.cpp
stm/sw/: configure.ac  glib-tap.mk
stm/sw/src/: CMakeLists.txt  Makefile.am  application_intf.cpp  init.c  init.cpp  internal.h  server_intf.cpp
testserver/: CMakeLists.txt  Makefile.am  key_transfer_intf.cpp  key_trasnfer_intf.cpp  key_usage_polices.cpp  keyserver.h  testserver.cpp  utils.cpp
testserver/certs/: ca.cnf  mk-certs.sh  rootcert.pem  setup.sh  test-rsa-cert.pem
utils/: Makefile.am  curl.cpp  utils.h
